Alignment fixes

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,6 +7,7 @@
   background-color: white;
   // position: absolute;
   bottom: 0;
+  position: sticky;
 }
 
 body{
